[package]
name = "libdivide"
description = """Port of libdivide."""
version = "0.4.0"
homepage = "https://github.com/youknowone/rust-divide"
documentation = "https://docs.rs/libdivide"
repository = "https://github.com/youknowone/rust-divide"
authors = ["Jeong YunWon <libdivide@youknowone.org>"]
edition = "2018"
license = "Zlib"
keywords = ["libdivide", "divide"]
categories = ["mathematics", "algorithms"]
readme = "README.md"

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"
thiserror = "1.0.24"
