[package]
name = "libdivide"
description = """Port of libdivide."""
version = "0.4.0"
homepage = "https://github.com/youknowone/rust-divide"
documentation = "https://docs.rs/libdivide"
repository = "https://github.com/youknowone/rust-divide"
authors = ["Jeong YunWon <libdivide@youknowone.org>"]
edition = "2021"
license = "Zlib"
license-file = "LICENSE.txt"
keywords = ["libdivide", "divide"]
categories = ["mathematics", "algorithms"]
readme = "README.md"

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"
thiserror = { version = "2", default-features = false }

[dev-dependencies]
proptest = "1.0"
